--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,28 @@
 [versions]
 agp = "8.6.1"
 circleimageview = "3.1.0"
-fragmentKtx = "1.8.3"
+fragmentKtx = "1.8.5"
 glide = "4.16.0"
 hiltAndroidVersion = "2.52"
 hiltCompiler = "2.52"
 imagepicker = "2.1"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
+kotlin = "1.9.22"
+coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 kotlinxCoroutinesCore = "1.8.1"
-lifecycleLivedataKtx = "2.8.6"
+lifecycleLivedataKtx = "2.8.7"
+mapsMobile = "4.2.2-full"
 material = "1.12.0"
-activity = "1.9.2"
-constraintlayout = "2.1.4"
+activity = "1.10.0"
+constraintlayout = "2.2.0"
 materialVersion = "1.12.0"
-navigationFragmentKtx = "2.8.1"
-navigationFragmentKtxVersion = "2.8.1"
+navigationFragmentKtx = "2.8.6"
+navigationFragmentKtxVersion = "2.8.6"
 okhttp = "4.12.0"
-pagingRuntimeKtx = "3.3.2"
+pagingRuntimeKtx = "3.3.5"
 retrofit = "2.9.0"
 roomRuntime = "2.6.1"
 swiperefreshlayout = "1.1.0"
@@ -52,6 +53,7 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+maps-mobile = { module = "com.yandex.android:maps.mobile", version.ref = "mapsMobile" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
